--- a/css/style.css
+++ b/css/style.css
@@ -10,26 +10,32 @@ body{
 }
 
 main{
-    height: calc(100vh - 75px);
+    height: calc(100vh - 50px);
     background-color: #F8F9FA;
 }
 
 /* HEADER */
 
 header{
-    height: 75px;
-    border: 2px solid red;
+    height: 50px;
 }
 
-header img{
-    width: 70px;
+.logo-mobile{
+    width: 50px;
+}
+
+.logo{
+    width: 150px;
+}
+
+.gold{
+    color: #FFD700;
 }
 /* SIDEBAR */
 
 .sidebar{
     height: 100%;
     width: 75px;
-    border: 2px solid red;
     background-image: url(../img/sidebar-bg.png);
     background-color: #051E34;
 }
@@ -39,7 +45,6 @@ header img{
 .main-content{
     height: 100%;
     width: calc(100% - 75px);
-    border: 2px solid blue;
 }
 
 /* MAIN-CONTENT-TOP */
@@ -56,7 +61,7 @@ header img{
     width: 100vw;
 }
 
-label{
+.offcanvas.offcanvas-end label{
     padding-top: 5px;
 }
 
@@ -71,9 +76,6 @@ table img{
     width: 25px;
 }
 
-/* BACKGROUND */
-
-
 /* MEDIA-QUERY */
 
 @media screen and (min-width:992px) {
@@ -85,4 +87,11 @@ table img{
         width: 50vw;
     }
     
+    .main-content{
+        width: calc(100% - 200px);
+    }
+
+    .width{
+        width: 40%;
+    }
 }
